--- a/business.html
+++ b/business.html
@@ -8,16 +8,19 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css" >
-	<link rel="stylesheet" href="css/animate.css">
+	<!-- <link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/swiper.min.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css"> -->
 </head>
-<body style="background-color: #FAFAFA">
+<body>
 	<header>
-		<div class="fl fold"></div>
-		<div class="fr logo"></div>
+		<div class="fold"></div>
+		<div class="logo"></div>
 	</header>
 	<ul id="accordion" class="accordion">
+		<li>
+			<div class="link"><a href="index.html">首页</a></div>
+		</li>
 		<li>
 			<div class="link"><a href="company.html">公司介绍</a></div>
 			<!-- <ul class="submenu">
@@ -43,67 +46,43 @@
 			<div class="link"><a href="contact.html">联系我们</a></div>
 		</li>
 	</ul>
-	<div class="swiper-container company">
-	    <div class="swiper-wrapper">
-	        <div class="swiper-slide">
-	      		<h1>业务范围</h1>
-				<p class="txt">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				<div class="introduce">
-					<div class="img"></div>
-					<div class="tit ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">创意设计</div>
-					<p  class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				</div>
-				<div class="arrow bounce"></div>
-	      	</div>
-		    <div class="swiper-slide">
-		    	<div class="introduce margin">
-					<div class="img"></div>
-					<div class="tit ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">视频动画创意制作</div>
-					<p  class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				</div>
-				<div class="arrow bounce"></div>
-		    </div>
-		    <div class="swiper-slide">
-		    	<div class="introduce margin">
-					<div class="img"></div>
-					<div class="tit ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">视觉系统创意生成</div>
-					<p  class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				</div>
-				<div class="arrow bounce"></div>
-		    </div>
-		    <div class="swiper-slide">
-		    	<div class="introduce margin">
-					<div class="img"></div>
-					<div class="tit ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">新媒体日常运营</div>
-					<p  class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				</div>
-				<div class="arrow bounce"></div>
-		    </div>
-		    <div class="swiper-slide">
-		    	<div class="introduce margin">
-					<div class="img"></div>
-					<div class="tit ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2.0公共关系传播</div>
-					<p  class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				</div>
-				<div class="arrow bounce"></div>
-		    </div>
-		    <div class="swiper-slide">
-		    	<div class="introduce">
-					<div class="img"></div>
-					<div class="tit ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">更多</div>
-					<p  class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				</div>
-				<a href="#" class="func">查看所有功能</a>
-		    </div>
-	    </div>
-    <!-- Add Pagination -->
-    <!-- <div class="swiper-pagination"></div> -->
+	<div class="business-wrap">
+		<div class="bs-all">
+			<div class="img"></div>
+			<div class="tit">创意设计</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+    	<div class="bs-all">
+			<div class="img"></div>
+			<div class="tit">视频动画创意制作</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+    	<div class="bs-all">
+			<div class="img"></div>
+			<div class="tit">视觉系统创意生成</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+    	<div class="bs-all">
+			<div class="img"></div>
+			<div class="tit">新媒体日常运营</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+    	<div class="bs-all">
+			<div class="img"></div>
+			<div class="tit">2.0公共关系传播</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+    	<div class="bs-all">
+			<div class="img"></div>
+			<div class="tit">更多</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
   	</div>
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/menu.js"></script>
-<script type="text/javascript" src="js/swiper.min.js"></script>
+<!-- <script type="text/javascript" src="js/swiper.min.js"></script>
 <script type="text/javascript" src="js/swiper.animate1.0.2.min.js"></script>
 <script>
     var swiper = new Swiper('.company', {
@@ -120,5 +99,5 @@
       swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
     } 
     });
-  </script>
+  </script> -->
 </html>
