--- a/value.html
+++ b/value.html
@@ -8,15 +8,18 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css" >
-	<link rel="stylesheet" href="css/swiper.min.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<!-- <link rel="stylesheet" href="css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css"> -->
 </head>
 <body>
 	<header>
-		<div class="fl fold"></div>
-		<div class="fr logo"></div>
+		<div class="fold"></div>
+		<div class="logo"></div>
 	</header>
 	<ul id="accordion" class="accordion">
+		<li>
+			<div class="link"><a href="index.html">首页</a></div>
+		</li>
 		<li>
 			<div class="link"><a href="company.html">公司介绍</a></div>
 			<!-- <ul class="submenu">
@@ -42,34 +45,38 @@
 			<div class="link"><a href="contact.html">联系我们</a></div>
 		</li>
 	</ul>
-	<div class="business">
-		<h1>摩客价值</h1>
-		<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-	</div>	
-	<div class="value">			
-		<div class="img"></div>
-		<div class="tit animated fadeInLeft">建立稳定增长的信任关系</div>
-		<p class="animated fadeInRight">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-		<div class="img"></div>
-		<div class="tit animated fadeInLeft">构筑深层次的沟通群</div>
-		<p class="animated fadeInRight">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-		<div class="img"></div>
-		<div class="tit animated fadeInLeft">产生具有影响力和革命性的传播效果</div>
-		<p class="animated fadeInRight">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-		<div class="img"></div>
-		<div class="tit animated fadeInLeft">助维持续性的市场影响力</div>
-		<p class="animated fadeInRight">遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+	<div class="value">	
+		<div class="value-wrap">
+			<div class="img"></div>
+			<div class="tit">建立稳定增长的信任关系</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+		<div class="value-wrap">
+			<div class="img"></div>
+			<div class="tit">构筑深层次的沟通群</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+		<div class="value-wrap">
+			<div class="img"></div>
+			<div class="tit">产生具有影响力和革命性的传播效果</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>
+		<div class="value-wrap">
+			<div class="img"></div>
+			<div class="tit">助维持续性的市场影响力</div>
+			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
+		</div>		
 	</div>
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/menu.js"></script>
-<script type="text/javascript" src="js/swiper.min.js"></script>
+<!-- <script type="text/javascript" src="js/swiper.min.js"></script>
 <script>
 	 var swiper = new Swiper('.first', {
       pagination: {
         el: '.swiper-pagination',
       },
     });
-</script>
+</script> -->
 </html>
