--- a/case.html
+++ b/case.html
@@ -8,15 +8,18 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css" >
-	<link rel="stylesheet" type="text/css" href="css/swiper.min.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css"> -->
 </head>
-<body style="background-color: #FAFAFA;">
+<body>
 	<header>
-		<div class="fl fold"></div>
-		<div class="fr logo"></div>
+		<div class="fold"></div>
+		<div class="logo"></div>
 	</header>
 	<ul id="accordion" class="accordion">
+		<li>
+			<div class="link"><a href="index.html">首页</a></div>
+		</li>
 		<li>
 			<div class="link"><a href="company.html">公司介绍</a><!-- <i class="fa fa-angle-down"></i> --></div>
 			<!-- <ul class="submenu">
@@ -42,61 +45,50 @@
 			<div class="link"><a href="contact.html">联系我们</a></div>
 		</li>
 	</ul>
-	<!-- <div class="news"> -->
-	<div class="swiper-container news">
-	    <div class="swiper-wrapper">
-	        <div class="swiper-slide">
-	        	<h1>案例展示</h1>	
-				<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
-				<div class="news-all">
-					<div class="img"><img src="img/product_1.jpg" alt=""></div>
-					<div class="tit">案例1</div>
-					<p>Far far away behind the word mountains</p>
-				</div>
-				<div class="arrow bounce"></div>
-	        </div>
-	        <div class="swiper-slide">
-				<div class="news-all margin">
-					<div class="img"><img src="img/product_1.jpg" alt=""></div>
-					<div class="tit">案例2</div>
-					<p>Far far away behind the word mountains</p>
-				</div>
-				<div class="arrow bounce"></div>
-	        </div>
-	        <div class="swiper-slide">
-				<div class="news-all margin">
-					<div class="img"><img src="img/product_1.jpg" alt=""></div>
-					<div class="tit">案例3</div>
-					<p>Far far away behind the word mountains</p>
-				</div>
-				<div class="arrow bounce"></div>
-	        </div>
-	        <div class="swiper-slide">
-				<div class="news-all margin">
-					<div class="img"><img src="img/product_1.jpg" alt=""></div>
-					<div class="tit">案例4</div>
-					<p>Far far away behind the word mountains</p>
-				</div>
-				<div class="arrow bounce"></div>
-	        </div>
-	        <div class="swiper-slide">
-				<div class="news-all">
-					<div class="img"><img src="img/product_1.jpg" alt=""></div>
-					<div class="tit">案例5</div>
-					<p>Far far away behind the word mountains</p>
-				</div>
-				<a href="#" class="see">查看所有产品</a>
-	        </div>
-	    </div>
+	<div class="news">
+        <div class="news-wrap">
+			<div class="img">
+				<img src="img/product_1.jpg" alt="">
+			</div>
+			<div class="tit">案例1</div>
+			<p>Far far away behind the word mountains</p>
+        </div>
+        <div class="news-wrap">
+			<div class="img">
+				<img src="img/product_1.jpg" alt="">
+			</div>
+			<div class="tit">案例2</div>
+			<p>Far far away behind the word mountains</p>
+        </div>
+        <div class="news-wrap">
+			<div class="img"><img src="img/product_1.jpg" alt=""></div>
+			<div class="tit">案例3</div>
+			<p>Far far away behind the word mountains</p>
+        </div>
+        <div class="news-wrap">
+			<div class="img">
+				<img src="img/product_1.jpg" alt="">
+			</div>
+			<div class="tit">案例4</div>
+			<p>Far far away behind the word mountains</p>
+   		</div>
+        <div class="news-wrap">
+			<div class="img">
+				<img src="img/product_1.jpg" alt="">
+			</div>
+			<div class="tit">案例5</div>
+			<p>Far far away behind the word mountains</p>
+		</div>
+		<!-- <a href="#" class="see">查看所有产品</a> -->
 	</div>
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/menu.js"></script>
-<script type="text/javascript" src="js/swiper.min.js"></script>
+<!-- <script type="text/javascript" src="js/swiper.min.js"></script>
 <script>
 	var swiper = new Swiper('.news', {
       direction: 'vertical',
     });
-</script>
+</script> -->
 </html>
