--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,13 @@
 </head>
 <body>
 	<header>
-		<div class="fl fold"></div>
-		<div class="fr logo"></div>
+		<div class="fold"></div>
+		<div class="logo"></div>
 	</header>
 	<ul id="accordion" class="accordion">
+		<li>
+			<div class="link"><a href="index.html">首页</a></div>
+		</li>
 		<li>
 			<div class="link"><a href="company.html">公司介绍</a></div>
 			<!-- <ul class="submenu">
