--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<div class="small">by FREEHTML5.co Images: Pexels</div>
 		<img src="img/footer.png" alt="">
 	</footer>
-	<div class="top" id="toTop"></div>
+	<div class="top" id="toTop_1"></div>
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
