--- a/company.html
+++ b/company.html
@@ -68,6 +68,7 @@
 			<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.8s" swiper-animate-delay="0.6s">摩客成立，以全新的数字传授理念，建立品牌和用户之间全新关系，并以至臻完美的服务理念</p>
 		</div>
   	</div>
+  	<div class="alert">没有更多数据了,去其他页面试试吧！</div>
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
