--- a/business.html
+++ b/business.html
@@ -78,9 +78,9 @@
 			<p>遥远的山脉后面，远离国家Vokalia和Consonantia，生活中的盲文。分开他们住在Bookmarksgrove.</p>
 		</div>
   	</div>
-  	<div class="alert">
+  	<!-- <div class="alert">
   		<p>没有更多数据了,去其他页面试试吧！</p>
-  	</div>
+  	</div> -->
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
