--- a/case.html
+++ b/case.html
@@ -81,9 +81,9 @@
 		</div>
 		<!-- <a href="#" class="see">查看所有产品</a> -->
 	</div>
-	<div class="alert">
+	<!-- <div class="alert">
   		<p>没有更多数据了,去其他页面试试吧！</p>
-  	</div>
+  	</div> -->
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
